Moving the default mount point of the shared folder to /data - as is the norm with other docker containers.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,6 @@ web:
   links:
    - db
   # volumes:
-  #  - /var/docker-shares/mediawiki:/var/shared-www/html:rw
+  #  - /local/data/dir:/data:rw
   environment:
    - MEDIAWIKI_DB_PASSWORD=password
