Allow for file uploads larger than 2M.

--- a/apache/mediawiki.conf
+++ b/apache/mediawiki.conf
@@ -1,3 +1,7 @@
+# Set upload limit to 210MB to allow for larger file uploads
+# NOTE: this limit is also enforced by php's limits, see /etc/php.ini
+LimitRequestBody 220200960
+
 <Directory /var/www/html>
   RewriteEngine On
   RewriteBase /
