Disable AllowOverride to disable all .htaccess files. Reduces potential security risks.

--- a/apache/mediawiki.conf
+++ b/apache/mediawiki.conf
@@ -3,6 +3,10 @@
 LimitRequestBody 220200960
 
 <Directory /var/www/html>
+  # Use of .htaccess files exposes a lot of security risk,
+  # disable them and put all the necessary configuration here instead.
+  AllowOverride None
+
   RewriteEngine On
   RewriteBase /
   RewriteRule ^index\.php$ - [L]
@@ -20,4 +24,33 @@ LimitRequestBody 220200960
 
   # Don't run arbitrary PHP code.
   php_admin_flag engine off
+</Directory>
+
+# Protect risky directory from abuse
+<Directory /var/www/html/cache/>
+  Deny from all
+</Directory>
+<Directory /var/www/html/images/>
+  Deny from all
+</Directory>
+<Directory /var/www/html/includes/>
+  Deny from all
+</Directory>
+<Directory /var/www/html/languages/>
+  Deny from all
+</Directory>
+<Directory /var/www/html/maintenance/>
+  Deny from all
+</Directory>
+<Directory /var/www/html/maintenance/archives/>
+  Deny from all
+</Directory>
+<Directory /var/www/html/serialized/>
+  Deny from all
+</Directory>
+<Directory /var/www/html/tests/>
+  Deny from all
+</Directory>
+<Directory /var/www/html/tests/qunit/>
+  Allow from all
 </Directory>
