Simplified Dockerfile(s) and sped up build time slightly by moving the two separate apt-get install tasks together, which prevents the need for downloading the aptitude repos twice (although still downloaded plenty of times by the php image this bases off of).

--- a/Dockerfile-postgres
+++ b/Dockerfile-postgres
@@ -10,6 +10,7 @@ RUN set -x; \
         libicu52 \
         libicu-dev \
         libpq-dev \
+        imagemagick \
     && pecl install intl \
     && echo extension=intl.so >> /usr/local/etc/php/conf.d/ext-intl.ini \
     && apt-get purge -y --auto-remove g++ libicu-dev \
@@ -17,11 +18,6 @@ RUN set -x; \
 
 # Enable PHP modules, see https://github.com/docker-library/php/blob/master/docker-php-ext-install
 RUN docker-php-ext-install mysqli pgsql opcache
-
-RUN set -x; \
-    apt-get update \
-    && apt-get install -y --no-install-recommends imagemagick \
-    && rm -rf /var/lib/apt/lists/*
 
 RUN a2enmod rewrite
 
