Removing mysqli module from being enabled on the postgres Dockerfile.

--- a/Dockerfile-postgres
+++ b/Dockerfile-postgres
@@ -17,7 +17,7 @@ RUN set -x; \
     && rm -rf /var/lib/apt/lists/*
 
 # Enable PHP modules, see https://github.com/docker-library/php/blob/master/docker-php-ext-install
-RUN docker-php-ext-install mysqli pgsql opcache
+RUN docker-php-ext-install pgsql opcache
 
 RUN a2enmod rewrite
 
