Support for apache using SSL.

--- a/apache/mediawiki.conf
+++ b/apache/mediawiki.conf
@@ -2,6 +2,25 @@
 # NOTE: this limit is also enforced by php's limits, see /etc/php.ini
 LimitRequestBody 220200960
 
+# Support for SSL, redirect HTTP to HTTPS and place in SSL stuff.
+<IfModule ssl_module>
+  <VirtualHost *:80>
+    RewriteEngine On
+    RewriteCond %{HTTPS} off
+    RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
+  </VirtualHost>
+
+  <VirtualHost *:443>
+    SSLEngine on
+    SSLProtocol All -SSLv2 -SSLv3
+    SSLCipherSuite EECDH+ECDSA+AESGCM:EECDH+aRSA+AESGCM:EECDH+ECDSA+SHA384:EECDH+ECDSA+SHA256:EECDH+aRSA+SHA384:EECDH+aRSA+SHA256:EECDH+aRSA+RC4:EECDH:EDH+aRSA!RC4!aNULL!eNULL!LOW!3DES!MD5!EXP!PSK!SRP!DSS
+    SSLCertificateFile /etc/apache2/ssl.crt
+    SSLCertificateKeyFile /etc/apache2/ssl.key
+    SSLCertificateChainFile /etc/apache2/ssl.bundle.crt
+    SSLInsecureRenegotiation on
+  </VirtualHost>
+</IfModule>
+
 <Directory /var/www/html>
   # Use of .htaccess files exposes a lot of security risk,
   # disable them and put all the necessary configuration here instead.
