--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,17 @@ web:
   ports:
    - 80:80
    - 443:443
+  # use the links section if you want to use a container for a database.
+  # if not, and you want to use an external database server, configure
+  # if with the environment variables in the 'environment' section.
+  # see README.md for more details.
   links:
    - db
+  # uncomment the 'volumes' section to enable a shared volume with docker-compose
   # volumes:
   #  - /local/data/dir:/data:rw
   environment:
    - MEDIAWIKI_DB_PASSWORD=password
+
+   # uncomment 'MEDIAWIKI_ENABLE_SSL' to enable SSL support
+   # - MEDIAWIKI_ENABLE_SSL=true
