--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ web:
   # volumes:
   #  - /local/data/dir:/data:rw
   environment:
+   - MEDIAWIKI_SITE_SERVER=//my-wiki
+   - MEDIAWIKI_SITE_NAME=My Awesome Wiki
    - MEDIAWIKI_DB_PASSWORD=password
 
    # uncomment 'MEDIAWIKI_ENABLE_SSL' to enable SSL support
