Removed use of MEDIAWIKI_ENABLE_SSL environment variable, instead we just detect the presence of the ssl certificate and enable based on it being there on startup. Also removed the ability to change the MEDIAWIKI_SHARED path.

--- a/apache/mediawiki.conf
+++ b/apache/mediawiki.conf
@@ -12,9 +12,9 @@ LimitRequestBody 220200960
 
   <VirtualHost *:443>
     SSLEngine on
-    SSLCertificateFile /etc/apache2/ssl.crt
-    SSLCertificateKeyFile /etc/apache2/ssl.key
-    SSLCertificateChainFile /etc/apache2/ssl.bundle.crt
+    SSLCertificateFile /data/ssl.crt
+    SSLCertificateKeyFile /data/ssl.key
+    SSLCertificateChainFile /data/ssl.bundle.crt
   </VirtualHost>
 </IfModule>
 
