Proxy the REST API at /api/rest_v1/

--- a/apache/mediawiki.conf
+++ b/apache/mediawiki.conf
@@ -18,6 +18,10 @@ LimitRequestBody 220200960
   </VirtualHost>
 </IfModule>
 
+# Expose REST API at /api/rest_v1/
+ProxyPassInterpolateEnv On
+ProxyPass /api/rest_v1/ ${MEDIAWIKI_RESTBASE_URL}/ interpolate
+
 <Directory /var/www/html>
   # Use of .htaccess files exposes a lot of security risk,
   # disable them and put all the necessary configuration here instead.
