--- a/apache/mediawiki.conf
+++ b/apache/mediawiki.conf
@@ -19,8 +19,9 @@ LimitRequestBody 220200960
 </IfModule>
 
 # Expose REST API at /api/rest_v1/
-ProxyPassInterpolateEnv On
-ProxyPass /api/rest_v1/ ${MEDIAWIKI_RESTBASE_URL}/ interpolate
+RewriteEngine On
+RewriteCond ${MEDIAWIKI_RESTBASE_URL} "!^restbase-is-not-specified$"
+RewriteRule "^/api/rest_v1/(.*)$"  "${MEDIAWIKI_RESTBASE_URL}/$1"  [P]
 
 <Directory /var/www/html>
   # Use of .htaccess files exposes a lot of security risk,
