Upgrade to latest best practices
- Support latest version of docker-compose
- Remove dependency on --link
- Use ARG for building, which removes all of the nearly identical branches

--- a/Dockerfile-postgres
+++ b/Dockerfile-postgres
@@ -17,10 +17,11 @@ RUN set -x; \
         g++ \
         libicu52 \
         libicu-dev \
+        libpq-dev \
         libzip-dev \
         imagemagick \
     && ln -fs /usr/lib/x86_64-linux-gnu/libzip.so /usr/lib/ \
-    && docker-php-ext-install intl mysqli zip mbstring opcache fileinfo \
+    && docker-php-ext-install intl pgsql zip mbstring opcache fileinfo \
     && apt-get purge -y --auto-remove g++ libicu-dev libzip-dev \
     && rm -rf /var/lib/apt/lists/*
 
