--- a/apache/mediawiki.conf
+++ b/apache/mediawiki.conf
@@ -18,11 +18,6 @@ LimitRequestBody 220200960
   </VirtualHost>
 </IfModule>
 
-# Expose REST API at /api/rest_v1/
-RewriteEngine On
-RewriteCond ${MEDIAWIKI_RESTBASE_URL} "!^restbase-is-not-specified$"
-RewriteRule "^/api/rest_v1/(.*)$"  "${MEDIAWIKI_RESTBASE_URL}/$1"  [P]
-
 <Directory /var/www/html>
   # Use of .htaccess files exposes a lot of security risk,
   # disable them and put all the necessary configuration here instead.
@@ -30,6 +25,9 @@ RewriteRule "^/api/rest_v1/(.*)$"  "${MEDIAWIKI_RESTBASE_URL}/$1"  [P]
 
   RewriteEngine On
   RewriteBase /
+  # Expose REST API at /api/rest_v1/
+  RewriteCond %{ENV:MEDIAWIKI_RESTBASE_URL} "!^restbase-is-not-specified$"
+  RewriteRule ^api/rest_v1/(.*)$  %{ENV:MEDIAWIKI_RESTBASE_URL}/$1  [P]
   RewriteRule ^index\.php$ - [L]
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
