Pull in recent improvements from PRs and develop

--- a/Dockerfile-base
+++ b/Dockerfile-base
@@ -16,6 +16,7 @@ RUN set -x; \
         libpq-dev \
         libzip-dev \
         imagemagick \
+        netcat \
     && ln -fs /usr/lib/x86_64-linux-gnu/libzip.so /usr/lib/ \
     && docker-php-ext-install intl zip mbstring opcache fileinfo \
     && docker-php-ext-install mysqli \
@@ -23,6 +24,11 @@ RUN set -x; \
     && apt-get purge -y --auto-remove g++ libicu-dev libzip-dev \
     && rm -rf /var/lib/apt/lists/*
 
+# Installing PEAR modules for Mail to allow MediaWiki to use SMTP for emails
+RUN pear install mail net_smtp
+
+# Enable the Apache rewrite module, which is commonly used so you can have
+# nicer formatted URLs than /index.php?page=...
 RUN a2enmod rewrite
 
 # Add mediawiki deployment keys from https://www.mediawiki.org/keys/keys.txt
