Pull in improvements from 'dev' branch

--- a/php.ini
+++ b/php.ini
@@ -1,3 +1,7 @@
 ; Override default PHP settings to allow for uploads larger than 2M
 upload_max_filesize = 200M
 post_max_size = 210M
+
+; Set timezone to not use system timezone to remove PHP warnings about not having one
+; http://php.net/date.timezone
+date.timezone = UTC
